fix(tilelayout): item should have lower z-index by default

--- a/packages/default/scss/tilelayout/_layout.scss
+++ b/packages/default/scss/tilelayout/_layout.scss
@@ -15,6 +15,11 @@
         }
     }
 
+    .k-tilelayout-item {
+        position: relative;
+        z-index: 0;
+    }
+
     .k-layout-item-hint {
         @include border-radius( $tilelayout-hint-border-radius );
         border-width: $tilelayout-hint-border-width;
